--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: install env
       run: |
+           apt-get update
+           apt-get upgrade
            sudo apt install build-essential openjdk-8-jdk maven cmake byacc flex automake libtool-bin bison binutils-dev libiberty-dev zip unzip libncurses5-dev curl git ninja-build python
            sudo add-apt-repository ppa:ubuntu-toolchain-r/ppa
            sudo apt update
