--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,7 +24,7 @@ jobs:
            sudo apt install gcc-10 g++-10 
            sudo apt-get install autoconf automake libtool autopoint
     - name: build
-      run: USE_AVX2=0 sh build.sh
+      run: sudo WITH_MYSQL=1 WITH_LZO=1 USE_AVX2=0 sh build.sh
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.1.1
       with:
