--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,7 +26,7 @@ jobs:
     - name: build
       run: |
           sudo ls
-          sudo WITH_MYSQL=1 WITH_LZO=1 USE_AVX2=0 ./build.sh
+          sudo WITH_MYSQL=1 WITH_LZO=1 USE_AVX2=0 ./build.sh --clean --be --fe
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.1.1
       with:
