--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,7 +23,7 @@ jobs:
            sudo apt update
            sudo apt install gcc-10 g++-10 
            sudo apt-get install autoconf automake libtool autopoint
-           sudo export REPOSITORY_URL=https://doris-thirdparty-repo.bj.bcebos.com/thirdparty
+           export REPOSITORY_URL=https://doris-thirdparty-repo.bj.bcebos.com/thirdparty
            sudo sh build-thirdparty.sh
     - name: build
       run: |
