--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,7 +24,7 @@ jobs:
            sudo apt install gcc-10 g++-10 
            sudo apt-get install autoconf automake libtool autopoint
            export REPOSITORY_URL=https://doris-thirdparty-repo.bj.bcebos.com/thirdparty
-           sudo sh build-thirdparty.sh
+           sudo sh ./thirdparty/build-thirdparty.sh
     - name: build
       run: |
           sudo ls
